samples/_failures_safe/1761619875_4416cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68a9535f.c: In function ‘main’:
./samples/SAFE/__tmp_68a9535f.c:147:16: error: missing terminating " character
  147 |         printf("4. Trans
      |                ^~~~~~~~~
./samples/SAFE/__tmp_68a9535f.c:147:9: error: expected expression at end of input
  147 |         printf("4. Trans
      |         ^~~~~~
./samples/SAFE/__tmp_68a9535f.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68a9535f.c:147:9: error: expected declaration or statement at end of input
